--- a/style.css
+++ b/style.css
@@ -71,9 +71,10 @@ body::before {
   align-items: center;
   min-height: 100vh;
   background: radial-gradient(circle at 5% 3%, #163366 0%, transparent 20%),
-    radial-gradient(circle at 50% 50%, #163366 0%, transparent 40%),
-    linear-gradient(180deg, #0a0f25 0%, #081b3a 100%);
+    radial-gradient(circle at 50% 50%, #1633668d 0%, transparent 40%),
+    linear-gradient(180deg, #0a0e32 0%, #07092e 100%);
 }
+
 
 .container {
   max-width: 1200px;
@@ -669,10 +670,10 @@ p.dev {
   /* background: url("./assets/footerbg.png") center/cover no-repeat; */
   background: linear-gradient(
     to bottom,
-    #2b3549 0%,
-    #252f44be 40%,
-    #252f44be 60%,
-    #2b3549 100%
+    #2b354962 0%,
+    #252f442b 40%,
+    #252f442b 60%,
+    #2b354965 100%
   );
 
   width: 100vw;
