--- a/style.css
+++ b/style.css
@@ -91,28 +91,35 @@ body::before {
   align-items: center;
   min-height: 100vh;
   background: linear-gradient(108deg, #03062e 4.37%, #12122c 85.48%);
+  
 }
 .circlebg {
   width: 400px;
   height: 400px;
   flex-shrink: 0;
   border-radius: 400px;
-  background: rgba(22, 51, 102, 0.4);
+  /* background: rgba(22, 51, 102, 0.4); */
   filter: blur(157.64942932128906px);
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-}
-.container {
-  max-width: 1440px;
-  margin: 0 auto;
-  width: 100%;
-  display: inline-flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 40px;
+     z-index: 1; 
+   pointer-events: none;
+  }
+  .container {
+    max-width: 1440px;
+    margin: 0 auto;
+    width: 100%;
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+     position:relative;
+    z-index: 2;
+     height:100vh;
+    
 }
 
 .block {
@@ -362,7 +369,7 @@ p.dev {
 
 .LuSculpture .cta-button {
   max-width: 965px;
-  width:100%;
+  width: 100%;
   height: 70px;
   flex-shrink: 0;
   border-radius: 8px;
@@ -419,7 +426,7 @@ p.dev {
     ==================================== */
 #requestForm {
   margin: 50px 0;
-        margin-bottom: 6rem;
+  margin-bottom: 6rem;
 }
 .block form {
   display: inline-flex;
@@ -484,7 +491,7 @@ p.dev {
 #requestForm .cta-button {
   max-width: 726px;
   height: 70px;
-  width:100%;
+  width: 100%;
   flex-shrink: 0;
   border-radius: 12px;
   border: 1px solid rgba(255, 255, 255, 0.1);
@@ -497,8 +504,8 @@ p.dev {
   font-weight: 500;
   letter-spacing: 12.78px;
   margin-bottom: 0;
-  padding:0 25px;
-  cursor:pointer;
+  padding: 0 25px;
+  cursor: pointer;
 }
 /* ====================================
     SUCCESS MODAL STYLING
@@ -719,38 +726,37 @@ p.dev {
     gap: 30px;
   }
   .LuSculpture .cta-button {
- width:90%;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 300;
-  letter-spacing: 10px;
+    width: 90%;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 300;
+    letter-spacing: 10px;
   }
   .block form {
-  gap: 30px;
-}
-.form-group {
-  gap: 10px;
-}
-.form-group label {
-  font-size: 20px;
-  font-weight: 400;
-   letter-spacing: 10px;
-   width: 95%;
-  margin:auto;
-}
-.form-group input,
-.form-group select {
-  padding: 16px 18px;
-  width: 95%;
-  margin:auto;
-}
-#requestForm .cta-button {
-      width:95%;
-  font-size: 20px;   
-   letter-spacing: 11.78px;
-  margin:auto;
-}
-
+    gap: 30px;
+  }
+  .form-group {
+    gap: 10px;
+  }
+  .form-group label {
+    font-size: 20px;
+    font-weight: 400;
+    letter-spacing: 10px;
+    width: 95%;
+    margin: auto;
+  }
+  .form-group input,
+  .form-group select {
+    padding: 16px 18px;
+    width: 95%;
+    margin: auto;
+  }
+  #requestForm .cta-button {
+    width: 95%;
+    font-size: 20px;
+    letter-spacing: 11.78px;
+    margin: auto;
+  }
 }
 
 @media (max-width: 1023px) {
@@ -830,24 +836,24 @@ p.dev {
   .block {
     padding: 0 20px;
   }
-    .LuSculpture .cta-button {
-   font-size: 20px;
-   letter-spacing: 8px;
+  .LuSculpture .cta-button {
+    font-size: 20px;
+    letter-spacing: 8px;
   }
-    .block form {
-  gap: 25px;
-}
+  .block form {
+    gap: 25px;
+  }
 
-.form-group label {
-  font-size: 18px;
-  font-weight: 300;
-   letter-spacing: 6px;
-}
-#requestForm .cta-button {
-   font-size: 18px;   
-  font-weight: 400;
-  letter-spacing: 9px;
-}
+  .form-group label {
+    font-size: 18px;
+    font-weight: 300;
+    letter-spacing: 6px;
+  }
+  #requestForm .cta-button {
+    font-size: 18px;
+    font-weight: 400;
+    letter-spacing: 9px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -924,17 +930,17 @@ p.dev {
   .block {
     gap: 20px;
   }
-    .LuSculpture .cta-button {
-   font-size: 18px;
-   letter-spacing: 7px;
+  .LuSculpture .cta-button {
+    font-size: 18px;
+    letter-spacing: 7px;
   }
-      .block form {
-  gap: 20px;
-}
-#requestForm .cta-button {
-   font-size: 16px;   
-   letter-spacing: 6px;
-}
+  .block form {
+    gap: 20px;
+  }
+  #requestForm .cta-button {
+    font-size: 16px;
+    letter-spacing: 6px;
+  }
 }
 
 @media (max-width: 639px) {
@@ -1003,17 +1009,17 @@ p.dev {
   .block {
     gap: 10px;
   }
-    .LuSculpture .cta-button {
-   font-size: 16px;
-   letter-spacing: 3px;
+  .LuSculpture .cta-button {
+    font-size: 16px;
+    letter-spacing: 3px;
   }
-      .block form {
-  gap: 10px;
-}
-#requestForm .cta-button {
-   font-weight: 300;
-  letter-spacing: 6px;
-}
+  .block form {
+    gap: 10px;
+  }
+  #requestForm .cta-button {
+    font-weight: 300;
+    letter-spacing: 6px;
+  }
 }
 
 @media (max-width: 479px) {
@@ -1076,8 +1082,8 @@ p.dev {
     height: 50px;
   }
   #requestForm .cta-button {
-   letter-spacing: 3px;
-}
+    letter-spacing: 3px;
+  }
 }
 
 @media (max-width: 319px) {
