--- a/style.css
+++ b/style.css
@@ -207,6 +207,7 @@ p,
 .description {
   text-align: center;
 }
+
 .granted p {
   color: #c5c9cc;
   font-family: "SF Pro";
@@ -1086,18 +1087,6 @@ p.dev {
     line-height: 45px;
     letter-spacing: 8px;
   }
-  .granted p {
-    font-size: 22px;
-    font-weight: 400;
-    letter-spacing: 5.2px;
-  }
-  .granted h3 {
-    color: #c5c9cc;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 30px;
-    letter-spacing: 2px;
-  }
 }
 
 @media (max-width: 767px) {
@@ -1138,7 +1127,7 @@ p.dev {
     font-weight: 300;
   }
   .content-block p {
-    font-size: 18px;
+    font-size: 20px;
     line-height: 1.9;
     letter-spacing: 3px;
     font-weight: 300;
@@ -1209,19 +1198,43 @@ p.dev {
     letter-spacing: 10px;
   }
   .modal-content p {
-    font-size: 18px;
+    font-size: 17px;
     line-height: 40px;
     letter-spacing: 6px;
   }
+  .granted h1 {
+    text-align: left !important;
+  }
+
   .granted p {
     font-size: 20px;
     font-weight: normal;
     letter-spacing: 2px;
+    text-align: left;
+  }
+  .granted h2 {
+    text-align: left;
   }
   .granted h3 {
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 300;
     line-height: 20px;
+    letter-spacing: 2px;
+    text-align: left;
+  }
+  .container.granted {
+    align-items: flex-start;
+  }
+  .granted p {
+    font-size: 22px;
+    font-weight: 400;
+    letter-spacing: 5.2px;
+  }
+  .granted h3 {
+    color: #c5c9cc;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
     letter-spacing: 2px;
   }
 }
@@ -1257,7 +1270,7 @@ p.dev {
     line-height: 1.7;
   }
   .content-block p {
-    font-size: 16px;
+    font-size: 18px;
     line-height: 1.8;
     letter-spacing: 2.8px;
   }
@@ -1287,15 +1300,21 @@ p.dev {
   .footer p {
     font-size: 10px;
   }
-  .block {
-    gap: 10px;
-  }
+
   .LuSculpture .cta-button {
     font-size: 16px;
     letter-spacing: 3px;
   }
   .block form {
     gap: 10px;
+  }
+  .block {
+    align-items: flex-start;
+  }
+  .block h1,
+  .block h2,
+  .block p {
+    text-align: left;
   }
   #requestForm .cta-button {
     font-weight: 300;
@@ -1322,12 +1341,14 @@ p.dev {
 
 @media (max-width: 479px) {
   .container {
-    padding: 0 10px;
-    gap: 20px;
+    padding: 0 20px;
+    gap: 25px;
   }
+
   h1 {
-    font-size: 28px;
+    font-size: 30px;
     letter-spacing: 6px;
+    text-align: left;
   }
   .content-block h1 {
     font-size: 20px;
@@ -1335,8 +1356,9 @@ p.dev {
   }
 
   h2 {
-    font-size: 18px;
+    font-size: 22px;
     letter-spacing: 3.5px;
+    text-align: left;
   }
 
   h3 {
@@ -1348,12 +1370,12 @@ p.dev {
   }
 
   p {
-    font-size: 14px;
+    font-size: 17px;
     letter-spacing: 2.2px;
     line-height: 1.7;
   }
   .content-block p {
-    font-size: 14px;
+    font-size: 17px;
     line-height: 1.7;
     letter-spacing: 2.2px;
   }
@@ -1375,13 +1397,16 @@ p.dev {
   .container {
     gap: 10px;
   }
+
   .code-inputs {
     flex-wrap: wrap;
+    gap: 10px;
     justify-content: center;
+    max-width: 250px;
   }
   .code-digit {
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
   }
   #requestForm .cta-button {
     letter-spacing: 3px;
@@ -1403,26 +1428,37 @@ p.dev {
 }
 
 @media (max-width: 319px) {
+  .container {
+    padding: 0 10px;
+    gap: 20px;
+  }
+  .code-inputs {
+    max-width: 350px;
+  }
+  .code-digit {
+    width: 50px;
+    height: 50px;
+  }
   h1 {
-    font-size: 22px;
+    font-size: 24px;
     letter-spacing: 4px;
   }
 
   h2 {
-    font-size: 14px;
+    font-size: 20px;
     letter-spacing: 2.8px;
   }
 
   h3 {
-    font-size: 14px;
+    font-size: 18px;
   }
 
   h4 {
-    font-size: 13px;
+    font-size: 16px;
   }
 
   p {
-    font-size: 11px;
+    font-size: 16px;
     letter-spacing: 1.8px;
     line-height: 1.6;
   }
