--- a/style.css
+++ b/style.css
@@ -1133,7 +1133,7 @@ p.dev {
     font-weight: 300;
   }
   .content-block.space-between {
-    padding: 80px 0;
+    padding: 80px 20px;
     height: auto;
   }
   p.dev {
