--- a/style.css
+++ b/style.css
@@ -417,8 +417,8 @@ p.dev {
 
 .arrow-button {
   position: absolute;
-  bottom: 120px;
-  right: 120px;
+  bottom: 5%;     
+  right: 0%; 
   width: 60px;
   height: 60px;
   display: flex;
