--- a/style.css
+++ b/style.css
@@ -217,7 +217,7 @@ p,
   letter-spacing: 8.8px;
 }
 .spaceless {
-  gap: 30px;
+  gap: 2s0px;
 }
 /* ====================================
     ACCESS PAGE
