--- a/style.css
+++ b/style.css
@@ -89,7 +89,8 @@ body::before {
   height: 400px;
   flex-shrink: 0;
   border-radius: 400px;
-  background: rgba(22, 51, 102, 0.4);
+  background: rgba(22, 51, 102, 1);
+
   filter: blur(157.64942932128906px);
   position: absolute;
   top: 50%;
@@ -216,9 +217,13 @@ p,
   line-height: 70px;
   letter-spacing: 8.8px;
 }
-.spaceless {
-  gap: 20px;
+.spaceless h3 {
+  line-height: normal;
 }
+.spaceless {
+  gap: 30px;
+}
+
 /* ====================================
     ACCESS PAGE
     ==================================== */
@@ -375,10 +380,9 @@ p.dev {
   display: flex;
   align-items: center;
   padding: 40px 0;
-  max-width: 1095px;
-  width: 100%;
   height: 680px;
   flex-shrink: 0;
+  width: 100%;
 }
 
 .LuSculpture .cta-button {
@@ -418,7 +422,7 @@ p.dev {
 .arrow-button {
   position: absolute;
   bottom: 10%;
-  right: 0%;
+  right: 100px;
   width: 60px;
   height: 60px;
   display: flex;
