--- a/style.css
+++ b/style.css
@@ -392,7 +392,7 @@ p.dev {
   flex-shrink: 0;
   border-radius: 8px;
   border: 1px solid rgba(255, 255, 255, 0.1);
-  background: var(--accent-blue);
+  background: rgba(51, 144, 255, 0.9);
   box-shadow: 6px 6px 40px 0 rgba(10, 15, 37, 0.25);
   color: #fff;
   font-family: "SF Pro";
@@ -445,19 +445,17 @@ p.dev {
     Form and MODAL
     ==================================== */
 #requestForm {
-  margin: 50px 0;
-  margin-bottom: 6rem;
+   margin-bottom: 6rem;
   opacity: 0;
   animation: fadeIn var(--fade-slow) var(--ease-in) 0.08s forwards;
 }
 .formcontainer {
   display: inline-flex;
   flex-direction: column;
-  justify-content: flex-start;
-
-  height: auto;
-  min-height: 100vh;
-}
+  justify-content: center;
+  
+height: 1024px;
+ }
 .block form {
   display: inline-flex;
   flex-direction: column;
@@ -565,7 +563,7 @@ p.dev {
   flex-shrink: 0;
   border-radius: 12px;
   border: 1px solid rgba(255, 255, 255, 0.1);
-  background: var(--accent-blue);
+  background: rgba(51, 144, 255, 0.9);
   box-shadow: 6px 6px 40px 0 rgba(10, 15, 37, 0.25);
   color: #fff;
   font-family: "SF Pro";
@@ -821,7 +819,7 @@ p.dev {
 #requestForm .cta-button:hover {
   cursor: pointer;
   transform: translateY(-2px);
-  background: #338fffd2;
+  background: var(--accent-blue);
   box-shadow: 0 0 18px rgba(24, 143, 255, 0.19);
   transform: translateY(-1px);
 }
